[package]
name = "retumi"
version = "0.1.0"
edition = "2021"

[dependencies]
boa_engine = "0.20.0"
crossbeam = "0.8.4"
env_logger = "0.11.6"
html5ever = "0.27.0"
log = "0.4.26"
markup5ever = "0.14.1"
markup5ever_rcdom = "0.3.0"
serde_json = "1.0.140"
tendril = "0.4.3"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
