[package]
name = "retumi"
version = "0.1.0"
edition = "2021"

[dependencies]
boa_engine = "0.20.0"
crossbeam = "0.8.4"
html2text = { git = "https://github.com/reesmichael1/rust-html2text", rev = "b9338f4" }
html5ever = "0.29.1"
markup5ever = "0.14.1"
markup5ever_rcdom = "0.3.0"
reqwest = "0.12.12"
serde_json = "1.0.140"
tendril = "0.4.3"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "rt", "sync"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tui-realm-stdlib = "2.0.1"
tuirealm = "2.1.0"
